fix(Offcanvas): left and right offcanvas is not visible

--- a/scss/_offcanvas.scss
+++ b/scss/_offcanvas.scss
@@ -80,7 +80,7 @@
 
       &.showing,
       &.show:not(.hiding) {
-        transform: none;
+        transform: none !important; // stylelint-disable-line declaration-no-important
       }
 
       &.showing,
